Adiciona linter (credo) ao CI

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -46,5 +46,8 @@ jobs:
       - name: Install dependencies
         run: mix deps.get
 
+      - name: Run linter
+        run: mix credo --strict
+
       - name: Run tests
         run: mix test
