Adiciona checagem de formatação do CI

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -49,5 +49,8 @@ jobs:
       - name: Run linter
         run: mix credo --strict
 
+      - name: Check formatting
+        run: mix format --check-formatted
+
       - name: Run tests
         run: mix test
