--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -52,5 +52,8 @@ jobs:
       - name: Check formatting
         run: mix format --check-formatted
 
-      - name: Run tests
-        run: mix test
+      - name: Run tests with coverage
+        run: MIX_ENV=test mix coveralls.json
+
+      - name: Upload to Codecov
+        uses: codecov/codecov-action@v3.1.1
