--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -57,3 +57,27 @@ jobs:
 
       - name: Upload to Codecov
         uses: codecov/codecov-action@v3.1.1
+
+  deploy:
+    needs: build
+    if: github.ref == 'refs/heads/main'
+
+    runs-on: ubuntu-latest
+    environment: Gigalixir
+
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: main # Check out main instead of the latest commit
+          fetch-depth: 0 # Checkout the whole branch
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8.1
+
+      - uses: mhanberg/gigalixir-action@v0.4.0
+        with:
+          GIGALIXIR_APP: ${{ secrets.GIGALIXIR_APP }} # Feel free to also put this in your secrets
+          GIGALIXIR_USERNAME: ${{ secrets.GIGALIXIR_USERNAME }}
+          GIGALIXIR_PASSWORD: ${{ secrets.GIGALIXIR_PASSWORD }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
